Fix sometime load more button in messages list may wrap

--- a/app/styles/messages/_entries.scss
+++ b/app/styles/messages/_entries.scss
@@ -1,3 +1,11 @@
+.wdme-load-more {
+    text-align: center;
+    .load-more {
+        display: inline-block;
+        @include nowrap;
+        width: auto;
+    }
+}
 .wdme-sep {
     text-align: center;
     height: 40px;
